--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ tiktoken = "^0.2.0"
 colorama = "^0.4.6"
 cryptography = "^39.0.2"
 click = "^8.1.3"
+prompt-toolkit = "^3.0.38"
 
 [tool.poetry.scripts]
 terminalgpt = "terminalgpt.main:cli"
