--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ colorama = "^0.4.6"
 cryptography = "^39.0.2"
 click = "^8.1.3"
 prompt-toolkit = "^3.0.38"
+yaspin = "^2.3.0"
 
 [tool.poetry.scripts]
 terminalgpt = "terminalgpt.main:cli"
