--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,19 +3,25 @@ run-name: ${{ github.actor }} pushed a commit 🚀
 on: [push]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9"]
+        poetry-version: ["1.4.0"]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     container: python:3.9
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Set up dependencies
-        run: |
-            apt-get install make -y
-            apt-get install poetry -y
-      - name: Build
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
+          python-version: ${{ matrix.python-version }}
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+      - name: View poetry --help
+        run: poetry --help
 
-          
+            
       
       
