--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,12 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      # - name: Run image
-        # uses: abatilo/actions-poetry@v2
-        # with:
-        #   poetry-version: ${{ matrix.poetry-version }}
-      - name: poetry install
-        run: poetry --help
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+      - name: install
+        run: poetry install
       - name: build
         run: poetry build
-
-            
-      
-      
+        
