--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,8 @@ on:
 
 jobs:
   ci:
-    uses: ./.github/workflows/ci.yml@main
+    uses: ./.github/workflows/ci.yml
     with:
       python-version: 3.9
       poetry-version: 1.4.0
       os: ubuntu-latest
-      
