--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ terminalgpt = "terminalgpt.main:cli"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
