added tests + poetry test command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,7 @@ jobs:
         run: poetry install
       - name: build
         run: poetry build
+      - name: test
+        run: poetry run pytest -v
+
         
