github action tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,18 @@ jobs:
           poetry-version: ${{ inputs.poetry-version }}
       - name: build
         run: poetry build
-  # test:
-  #   runs-on: ${{ inputs.os }}
-  #   steps:
-  #     - name: test
-  #       run: poetry run pytest -v
+  test:
+    runs-on: ${{ inputs.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ inputs.python-version }}
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ inputs.poetry-version }}
+      - name: test
+        run: poetry run pytest -v
 
         
