github action tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,4 @@ jobs:
       - name: build
         run: poetry build
       - name: test
-        run: poetry run pytest -v
+        run: poetry run pytest
