--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ on:
         required: true
         type: string
 jobs:
-  build-and-test:
+  build:
     runs-on: ${{ inputs.os }}
     steps:
       - uses: actions/checkout@v3
@@ -27,7 +27,11 @@ jobs:
         uses: abatilo/actions-poetry@v2
         with:
           poetry-version: ${{ inputs.poetry-version }}
+      - name: install
+        run: poetry install
       - name: build
         run: poetry build
       - name: test
-        run: poetry run pytest
+        run: poetry run pytest -v
+
+        
