--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Continuous Integration
-run-name: ${{ github.actor }} CI 🚀
+run-name: ${{ github.actor }} CI on ${{ github.ref }}  🚀
 
 on:
   pull_request:
