--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Continuous Integration
-run-name: ${{ github.actor }} CI on ${{GITHUB_REF#refs/heads/}}  🚀
+run-name: ${{ github.actor }} CI 🚀
 
 on:
   pull_request:
