--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,13 @@ jobs:
       - name: build
         run: poetry build
       - name: test
-        run: poetry run pytest -v
-
-        
+        run: |
+          filename=$(date +"%Y-%m-%d")"_test_result.xml"
+          poetry run pytest -v --junitxml=${filename}
+      # TODOLATER: publish test results
+      # - name: Publish Test Results
+      #   uses: EnricoMi/publish-unit-test-result-action@v2
+      #   with:
+      #     files: |
+      #       test-results/**/*.xml
+              
