--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ terminalgpt = "terminalgpt.main:cli"
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
 pytest = "^7.2.2"
+pylint = "^2.17.0"
 
 [build-system]
 requires = ["poetry-core"]
