fixing token limit

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} CI 🚀
 on:
   push:
     branches:
-      - '*'
+      - 'main'
   pull_request:
     branches:
       - 'main'
