--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,8 @@ jobs:
       - name: lint
         run: poetry run pylint terminalgpt tests
       - name: test
-        run: |
-          filename=$(date +"%Y-%m-%d")"_test_result.xml"
-          poetry run pytest -v --junitxml=${filename}
-      # TODOLATER: publish test results
+        run: poetry run pytest
+      # TODO: publish test results
       # - name: Publish Test Results
       #   uses: EnricoMi/publish-unit-test-result-action@v2
       #   with:
