--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ cryptography = "^39.0.2"
 click = "^8.1.3"
 prompt-toolkit = "^3.0.38"
 yaspin = "^2.3.0"
+rich = "^13.3.3"
 
 [tool.poetry.scripts]
 terminalgpt = "terminalgpt.main:cli"
