--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,7 @@ jobs:
         run: poetry run pylint terminalgpt tests
       - name: version
         run: poetry run terminalgpt --version
-      - name: test-unit
+      - name: test
         env:
           OPENAI_API_KEY: mock-key-123-456-789
-        run: 	poetry run pytest -v --disable-warnings --cov=terminalgpt tests/unit
-      - name: test-integration
-        env:
-          OPENAI_API_KEY: mock-key-123-456-789
-        run: 	poetry run pytest -v --disable-warnings --cov=terminalgpt tests/integration
+        run: 	poetry run pytest -v --disable-warnings --cov=terminalgpt tests/unit tests/integration
