--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ click = "^8.1.3"
 prompt-toolkit = "^3.0.38"
 yaspin = "^2.3.0"
 rich = "^13.3.3"
+isort = "^5.12.0"
 
 [tool.poetry.scripts]
 terminalgpt = "terminalgpt.main:cli"
