--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,9 @@ jobs:
         env:
           OPENAI_API_KEY: mock-key-123-456-789
         run: 	poetry run pytest -v --disable-warnings --cov=terminalgpt tests/unit tests/integration
-      - name: Build and publish to pypi
-        uses: JRubics/poetry-publish@v1.16
-        with:
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
-          repository_name: "testpypi"
-          repository_url: "https://test.pypi.org/legacy/"
+      # - name: Build and publish to pypi
+      #   uses: JRubics/poetry-publish@v1.16
+      #   with:
+      #     pypi_token: ${{ secrets.PYPI_TOKEN }}
+      #     repository_name: "testpypi"
+      #     repository_url: "https://test.pypi.org/legacy/"
