--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,14 @@ python = "^3.9"
 openai = "^0.27.6"
 tiktoken = ">=0.2,<0.4"
 colorama = "^0.4.6"
-cryptography = ">=39.0.2,<41.0.0"
+cryptography = "^40.0.2"
 click = "^8.1.3"
 prompt-toolkit = "^3.0.38"
 yaspin = "^2.3.0"
-rich = "^13.3.3"
+rich = "^13.3.5"
 isort = "^5.12.0"
+pytest = "^7.3.1"
+pylint = "^2.17.4"
 
 [tool.poetry.scripts]
 terminalgpt = "terminalgpt.main:cli"
