seems like it's ready

--- a/launch.json.template
+++ b/launch.json.template
@@ -10,7 +10,10 @@
       "request": "launch",
       "program": "${file}",
       "console": "integratedTerminal",
-      "justMyCode": true
+      "justMyCode": true,
+      "env": {
+        "LOG_LEVEL": "DEBUG"
+      }
     },
     {
       "name": "install",
