--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,8 @@
-disable=missing-function-docstring
-disable=missing-module-docstring
+[MASTER]
+disable=missing-module-docstring,
+        missing-class-docstring,
+        missing-function-docstring,
+        line-too-long,
+        broad-exception-caught,
+        too-few-public-methods,
+        too-many-instance-attributes
