--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,15 @@ keywords = [
   "chatGPT",
   "terminalGPT",
   "assistant",
+  "devops",
+  "tool",
+  "cli",
   "gpt",
   "gpt-3.5",
   "gpt-3.5-turbo",
   "gpt-3.5-turbo-16k",
   "gpt-4",
   "gpt-4-32k",
-  "gpt-4-1106-preview",
 ]
 readme = "README.md"
 
